Fix branding.css
css: remove scrollbar

--- a/root/usr/share/cockpit/branding/nethserver/branding.css
+++ b/root/usr/share/cockpit/branding/nethserver/branding.css
@@ -99,7 +99,7 @@ li.credential-lock>a:first-child {
 }
 
 .navbar-brand {
-    line-height: 30px;
+    line-height: 15px;
     font-size: 20px;
     margin-left: 20px !important;
 }
@@ -109,7 +109,7 @@ li.credential-lock>a:first-child {
 }
 
 .navbar-pf .navbar-header {
-    height: 58px !important;
+    height: 48px !important;
     background: #171717;
 }
 
